fix center alignment

--- a/css/default.css
+++ b/css/default.css
@@ -592,25 +592,25 @@ input[type="checkbox"] { display: inline; }
 
 /* default
 --------------------------------------------------------------- */
-.row {
+.row_default {
    width: 96%;
    max-width: 1020px;
    margin: 0 auto;
 }
 /* fixed width for IE8 */
-.ie .row { width: 1000px ; }
+.ie .row_default { width: 1000px ; }
 
-.narrow .row { max-width: 980px; }
+.narrow .row_default { max-width: 980px; }
 
-.row .row { width: auto; max-width: none; margin: 0 -20px; }
+.row_default .row_default { width: auto; max-width: none; margin: 0 -20px; }
 
 /* row clearing */
-.row:before,
-.row:after {
+.row_default:before,
+.row_default:after {
     content: " ";
     display: table;
 }
-.row:after {
+.row_default:after {
     clear: both;
 }
 
@@ -626,63 +626,63 @@ input[type="checkbox"] { display: inline; }
 }
 
 /* removed gutters */
-.row.collapsed > .column,
-.row.collapsed > .columns,
+.row_default.collapsed > .column,
+.row_default.collapsed > .columns,
 .column.collapsed, .columns.collapsed  { padding: 0; }
 
 [class*="column"] + [class*="column"]:last-child { float: right; }
 [class*="column"] + [class*="column"].end { float: right; }
 
 /* column widths */
-.row .one         { width: 8.33333%; }
-.row .two         { width: 16.66667%; }
-.row .three       { width: 25%; }
-.row .four        { width: 33.33333%; }
-.row .five        { width: 41.66667%; }
-.row .six         { width: 50%; }
-.row .seven       { width: 58.33333%; }
-.row .eight       { width: 66.66667%; }
-.row .nine        { width: 75%; }
-.row .ten         { width: 83.33333%; }
-.row .eleven      { width: 91.66667%; }
-.row .twelve      { width: 100%; }
+.row_default .one         { width: 8.33333%; }
+.row_default .two         { width: 16.66667%; }
+.row_default .three       { width: 25%; }
+.row_default .four        { width: 33.33333%; }
+.row_default .five        { width: 41.66667%; }
+.row_default .six         { width: 50%; }
+.row_default .seven       { width: 58.33333%; }
+.row_default .eight       { width: 66.66667%; }
+.row_default .nine        { width: 75%; }
+.row_default .ten         { width: 83.33333%; }
+.row_default .eleven      { width: 91.66667%; }
+.row_default .twelve      { width: 100%; }
 
 /* Offsets */
-.row .offset-1    { margin-left: 8.33333%; }
-.row .offset-2    { margin-left: 16.66667%; }
-.row .offset-3    { margin-left: 25%; }
-.row .offset-4    { margin-left: 33.33333%; }
-.row .offset-5    { margin-left: 41.66667%; }
-.row .offset-6    { margin-left: 50%; }
-.row .offset-7    { margin-left: 58.33333%; }
-.row .offset-8    { margin-left: 66.66667%; }
-.row .offset-9    { margin-left: 75%; }
-.row .offset-10   { margin-left: 83.33333%; }
-.row .offset-11   { margin-left: 91.66667%; }
+.row_default .offset-1    { margin-left: 8.33333%; }
+.row_default .offset-2    { margin-left: 16.66667%; }
+.row_default .offset-3    { margin-left: 25%; }
+.row_default .offset-4    { margin-left: 33.33333%; }
+.row_default .offset-5    { margin-left: 41.66667%; }
+.row_default .offset-6    { margin-left: 50%; }
+.row_default .offset-7    { margin-left: 58.33333%; }
+.row_default .offset-8    { margin-left: 66.66667%; }
+.row_default .offset-9    { margin-left: 75%; }
+.row_default .offset-10   { margin-left: 83.33333%; }
+.row_default .offset-11   { margin-left: 91.66667%; }
 
 /* Push/Pull */
-.row .push-1      { left: 8.33333%; }
-.row .pull-1      { right: 8.33333%; }
-.row .push-2      { left: 16.66667%; 	}
-.row .pull-2      { right: 16.66667%; }
-.row .push-3      { left: 25%; }
-.row .pull-3      { right: 25%;	}
-.row .push-4      { left: 33.33333%; }
-.row .pull-4      { right: 33.33333%; }
-.row .push-5      { left: 41.66667%; }
-.row .pull-5      { right: 41.66667%; }
-.row .push-6      { left: 50%; }
-.row .pull-6      { right: 50%; }
-.row .push-7      { left: 58.33333%; }
-.row .pull-7      { right: 58.33333%; }
-.row .push-8      { left: 66.66667%; 	}
-.row .pull-8      { right: 66.66667%; }
-.row .push-9      { left: 75%; }
-.row .pull-9      { right: 75%; }
-.row .push-10     { left: 83.33333%; }
-.row .pull-10     { right: 83.33333%; }
-.row .push-11     { left: 91.66667%; }
-.row .pull-11     { right: 91.66667%; }
+.row_default .push-1      { left: 8.33333%; }
+.row_default .pull-1      { right: 8.33333%; }
+.row_default .push-2      { left: 16.66667%; 	}
+.row_default .pull-2      { right: 16.66667%; }
+.row_default .push-3      { left: 25%; }
+.row_default .pull-3      { right: 25%;	}
+.row_default .push-4      { left: 33.33333%; }
+.row_default .pull-4      { right: 33.33333%; }
+.row_default .push-5      { left: 41.66667%; }
+.row_default .pull-5      { right: 41.66667%; }
+.row_default .push-6      { left: 50%; }
+.row_default .pull-6      { right: 50%; }
+.row_default .push-7      { left: 58.33333%; }
+.row_default .pull-7      { right: 58.33333%; }
+.row_default .push-8      { left: 66.66667%; 	}
+.row_default .pull-8      { right: 66.66667%; }
+.row_default .push-9      { left: 75%; }
+.row_default .pull-9      { right: 75%; }
+.row_default .push-10     { left: 83.33333%; }
+.row_default .pull-10     { right: 83.33333%; }
+.row_default .push-11     { left: 91.66667%; }
+.row_default .pull-11     { right: 91.66667%; }
 
 /* block grids
 --------------------------------------------------------------------- */
@@ -720,7 +720,7 @@ properly.
 --------------------------------------------------------------- */
 @media only screen and (max-width: 767px) {
 
-   .row {
+   .row_default {
 	   width: 460px;
 	   margin: 0 auto;
       padding: 0;
@@ -732,30 +732,30 @@ properly.
 	   margin-right: 0;
       padding: 0 30px;
    }
-   .row .row { width: auto; max-width: none; margin: 0 -30px; }
+   .row_default .row_default { width: auto; max-width: none; margin: 0 -30px; }
 
    [class*="column"] + [class*="column"]:last-child { float: none; }
    [class*="bgrid"] [class*="column"] + [class*="column"]:last-child { float: none; }
 
    /* Offsets */
-   .row .offset-1    { margin-left: 0%; }
-   .row .offset-2    { margin-left: 0%; }
-   .row .offset-3    { margin-left: 0%; }
-   .row .offset-4    { margin-left: 0%; }
-   .row .offset-5    { margin-left: 0%; }
-   .row .offset-6    { margin-left: 0%; }
-   .row .offset-7    { margin-left: 0%; }
-   .row .offset-8    { margin-left: 0%; }
-   .row .offset-9    { margin-left: 0%; }
-   .row .offset-10   { margin-left: 0%; }
-   .row .offset-11   { margin-left: 0%; }
+   .row_default .offset-1    { margin-left: 0%; }
+   .row_default .offset-2    { margin-left: 0%; }
+   .row_default .offset-3    { margin-left: 0%; }
+   .row_default .offset-4    { margin-left: 0%; }
+   .row_default .offset-5    { margin-left: 0%; }
+   .row_default .offset-6    { margin-left: 0%; }
+   .row_default .offset-7    { margin-left: 0%; }
+   .row_default .offset-8    { margin-left: 0%; }
+   .row_default .offset-9    { margin-left: 0%; }
+   .row_default .offset-10   { margin-left: 0%; }
+   .row_default .offset-11   { margin-left: 0%; }
 }
 
 /* mobile narrow
 --------------------------------------------------------------- */
 @media only screen and (max-width: 460px) {
 
-   .row { width: auto; }
+   .row_default { width: auto; }
 
 }
 
@@ -763,7 +763,7 @@ properly.
 --------------------------------------------------------------- */
 @media screen and (min-width: 1200px) {
 
-   .wide .row { max-width: 1180px; }
+   .wide .row_default { max-width: 1180px; }
 
 }
 
